@startuml

title GET A LIST OF ALL PROJECTS
skinparam sequenceMessageAlign center
legend top
US015 - As a Manager, I want to get a list of all projects.
end legend

class "GetListOfProjectsController" {
-company
+getListOfProjects(email)
}

class "Company"{
-projectContainer
-accountContainer
+validateProfileRequired(email, profileNameRequired)
+listAllProjects()
}

class "AccountContainer"{
-accounts
+validateProfileRequired(email, profileNameRequired)
+getAccountByEmail(email)
}

class "Account"{
-email
-profile
+equals(Object toCompare)
+hashCode()
+isProfileRequired(profileNameRequired)
}

class Profile{
-profileName
+isProfileRequired(profileNameRequired)
+equals(Object toCompare)
+hashCode()
}

class "ProjectContainer"{
-projects
+getProjects()
}

class "Project"{
-projectCode
+equals(Object toCompare)
+hashCode()
}

class "ProjectMapper"{
+getListOfProjectsDto(projects)
+getDtoFromProject(project)
}

class "ProjectDto" {
+projectCode
+name
+customer
+status
+projectTypology
+businessSector
}

"GetListOfProjectsController" "1"-->"1" "Company": has
"GetListOfProjectsController" ..> "ProjectMapper"
"Company" "1"-->"1" "ProjectContainer": has
"Company" "1"-->"1" "AccountContainer": has
"AccountContainer" "1"-->"*" Account: contains
"ProjectContainer" "1"-->"*" Project: contains
"Account" "*"-->"1" "Profile" : has
"ProjectMapper" ..> "ProjectDto": instantiate

@enduml